src/components/ui/FilterCheckbox/FilterCheckbox.module.css
.checkbox {
  display: inline-block;
  border: var(--border-gray-200);
  border-radius: var(--border-radius-s);
}

.checkbox:hover {
  color: var(--color-white);
  border-color: var(--color-purple-700);
  background-color: var(--color-purple-700);
}

.checkbox:focus-within {
  outline: 2px dashed var(--color-purple-700);
  outline-offset: 2px;
  transition-duration: 0s !important;
}

.label {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  column-gap: 10px;
  padding: 9px 12px;
}

.label.isImage {
  padding-block: 6px;
}

.checkbox.isChecked {
  border: var(--border-purple-700);
}

.input {
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
  margin: 0;
  top: 0;
  left: 0;
  z-index: 1;
}

